# AIAgentTeam

./: .replit  AGENT-FRAMEWORK.md  AGENT-PAGE-LAYOUT.md  AGENTPAGE-UI.md  ARCHITECTURE.md  BACKUP-LLM-SELECTOR.md  BACKUP-V1.md  README.md  package-lock.json  package.json  pyproject.toml  replit.nix  theme.json
agents/: ARCHITECTURE.md  TEMPLATE.md
agents/ai-blogger/config/: agent-config.ts
agents/ai-blogger/handlers/: content-handler.ts
agents/ai-blogger/services/: langchain-service.ts  research-service.ts  topic-suggestion-service.ts
agents/content-generation-agent/config/: agent-config.ts
agents/content-generation-agent/handlers/: content-handler.ts
agents/content-generation-agent/types/: index.ts
agents/types/: agent.ts
chroma_db/: chroma.sqlite3
client/src/: App.tsx  main.tsx
client/src/components/: AgentAnalytics.tsx  AgentCard.tsx  AgentRegistrationWizard.tsx  BlogPostCard.tsx  BlogPostView.tsx  ContentGenerationDialog.tsx  CreateAgentDialog.tsx  CreateAgentForm.tsx  GenerationProgress.tsx  PerformanceAnalyticsDialog.tsx  ResearchForm.tsx  Sidebar.tsx  TeamManagement.tsx  TemplateManagementDialog.tsx  TopicSuggestionCard.tsx
client/src/components/agent-sections/: AgentInfoSection.tsx  AgentOutputSection.tsx  UserInteractiveSection.tsx  types.ts
client/src/components/ui/: download-button.tsx
client/src/hooks/: use-llm-provider.ts  use-theme.ts
client/src/lib/: ThemeProvider.tsx
client/src/pages/: AgentView.tsx  AllAgents.tsx  Dashboard.tsx  Settings.tsx
db/: schema.ts
server/: auth.ts  routes.ts  vector_service.py
