[project]
name = "repl-nix-agentmaster"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.115.6",
    "langchain-community>=0.3.13",
    "langchain>=0.3.13",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "duckduckgo-search>=7.1.1",
    "openai>=1.58.1",
    "python-docx>=1.1.2",
    "markdown>=3.7",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.1",
]
